  - Targeting system now respects the new ship linked list format.

  - Adjusted ship data file format to be more clean.

  - Ships are now stored in a linked list, rather than fixed array.

  - Submarines now run from torpedoes.

  - Ships with sonar will now run away from torpedoes.

  - Fixed torpedo's sonar.

  - Fixed ESM station display. Signals from targets now display.

  - Converted abs() calls to fabs for compatibility with FreeBSD.


============ openssn-0.3 released May 30, 2011 =================

  - Non-player ships now make course changes on their own.

  - Ships now take damage when hit by torpedoes and sink.

  - Torpedoes can now run out of fuel (after around 8-10 miles).

  - Added torpedo clean-up code.

  - Torpedos now listen for and track their targets.

  - Torpedos and noisemakers can now be fired by the player
    and are shown on the tactical map.
    
  - Torpedoes and noisemakers can be loaded using the mouse.

  - Reduced CPU usage on Weapons screen by about 50%.

  - Toned down waterfall display a little, reduced brightness.

  - Added weapons console and the ability to load/unload tubes.

  - Ship class data (name, speed, depth) is now kept in the
    "ships" directory and is loaded at the beginning of each
    scenario.

  - Now we can only select a target if we can see it on the map.


  ============ openssn-0.2 released May 23, 2011 ================

  - Added rough manual in ODF and PDF formats.

  - Sub now turns/dives a little faster.

  - We now display a message when switching screens to show which
    console we are viewing.

  - Desired depth and speed now stay within sane ranges.

  - Player can now get information on selected targets.

  - TMA screen wasn't working, removed it.

  - Targets are now picked up faintly at first, then become solid
    contacts and fade out when the signal is lost.

  - Made sure detection through sonar, esm and radar work.
    Also made sure radar and esm does not track subs.
