@@ -7,7 +7,6 @@ Torpedo stuff
 
 Maybe put all ships/subs/torpedoes in one list?
 
-Add missions and objectives
 Add thermal layer?
 
 
